fix contrast issue and compress images

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -44,8 +44,8 @@
 
 .App-header nav ul li a:hover,
 .App-header nav ul li a.active {
-  color: rgba(0, 0, 0, 0.5);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.7);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.7);
 }
 
 .App-link {
